# clime

./: .gitignore  Cargo.toml  data.json  features.md
dataset/: ReadMe2020-21.docx  add_timezones.py  doc.md  migrate.py
get-locations/: get_locations.py  pyproject.toml
migrations/: 001_create_weather_tables.sql  002_update_tables.sql  003_use_uuid.sql  004_uuids_are_blobs.sql  005_authentication.sql  006_hash_is_text.sql  007_just_kidding.sql  008_wrong_foreign_key.sql  009_user_prefs.sql  010_forecasts.sql  011_forecast_is_day.sql
openweather/: Cargo.toml  LICENSE-APACHE
openweather-api/src/: forecast.rs  lib.rs  units.rs
openweather/src/: forecast.rs  lib.rs  options.rs  units.rs  weather.rs
src/: db.rs  main.rs
src/api/: mod.rs  university.rs  user.rs
src/models/: forecast.rs  mod.rs  university.rs  user.rs  weather.rs
src/workers/: forecast.rs  mod.rs  weather.rs
static/: acknowlegements.html  app.html  app.js  global.css  index.html  privacy.html
weather-gov/: Cargo.toml
weather-gov/src/: forecast.rs  lib.rs  observations.rs  points.rs  stations.rs
web/: rollup.config.js
web/src/: App.svelte  Router.svelte  index.ts  models.d.ts  stores.ts
web/src/components/: Expandable.svelte  ForecastInfo.svelte  Link.svelte  UniversitySearch.svelte  WeatherInfo.svelte
web/src/pages/: AddUniversity.svelte  Dashboard.svelte  Login.svelte  Logout.svelte  Settings.svelte  UniversityInfo.svelte  UserInfo.svelte
