[package]
name = "clime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.1"
actix-files = "0.6"

chrono = "0.4"

anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "macros", "chrono", "uuid"] }

jsonwebtoken = "8.1.1"
futures-util = "0.3.21"
uuid = {version = "1.1.2", features = ["v4", "serde"]}
lazy_static = "1.4.0"
rust-argon2 = "1.0"

openweather = { path = "./openweather" }
rand = "0.8.5"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]


[workspace]
members = [
	"openweather"
]
