[package]
name = "openweather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

thiserror = "1.0"

[dev-dependencies]
tokio = {version = "1.20", default-features = false, features = ["rt", "macros"]}
env_logger = "0.9"